--- a/src/styles/components/_heading.scss
+++ b/src/styles/components/_heading.scss
@@ -15,7 +15,7 @@
   }
 
   &__title {
-    font-size: spruce.responsive-font-size(3rem);
+    font-size: spruce.responsive-font-size(3rem, 30);
   }
 
   &__description {
