--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -33,6 +33,9 @@
       background: hsl(207 95% 8%),
       foreground: hsl(0 0% 100%),
     ),
+    footer: (
+      background: hsl(260deg 70% 6%),
+    ),
     prism: (
       color: hsl(243 14% 29%),
       background: hsl(0 0% 98%),
