--- a/src/styles/components/_site-footer.scss
+++ b/src/styles/components/_site-footer.scss
@@ -1,24 +1,40 @@
+@use '../config/dark-colors' as dark;
 @use '~sprucecss/scss/spruce';
 
 .site-footer {
-  background-color: hsl(260deg 70% 6%);
-  color: hsl(0 0% 100% / 85%);
+  background-color: spruce.color(background, footer);
+  color: hsl(0deg 0% 100% / 85%);
   font-size: 1rem;
 
+  a {
+    color: spruce.color(link, $only-color: true, $map: dark.$colors);
+
+    &:hover,
+    &:focus {
+      color: spruce.color(link-hover, $only-color: true, $map: dark.$colors);
+    }
+  }
+
   &__slogen {
-    color: hsl(0 0% 100%);
-    font-family: spruce.$font-family-heading;
+    color: hsl(0deg 0% 100%);
+    font-family: var(--doc-heading-font-family);
     font-size: spruce.responsive-font-size(3rem, 30, '4vw + 1rem');
     font-weight: 700;
+    grid-auto-rows: auto;
     line-height: calc(#{spruce.$line-height-heading} * 1.15);
     margin-block: 0 2rem;
   }
 
   &__top {
+    --gtc: minmax(0, 1fr);
     display: grid;
     gap: spruce.spacer(l);
-    grid-template-columns: minmax(0, 3fr) repeat(3, minmax(0, 1fr));
+    grid-template-columns: var(--gtc);
     padding-block: spruce.get-css-variable(--section-gap);
+
+    @include spruce.breakpoint(md) {
+      --gtc: minmax(0, 2.5fr) repeat(3, minmax(0, 1fr));
+    }
   }
 
   &__logo {
@@ -46,7 +62,7 @@
       &:focus,
       &:active,
       &[aria-current='page'] {
-        color: spruce.color(primary);
+        color: spruce.color(link-hover, $only-color: true, $map: dark.$colors);
       }
 
       &[aria-current='page'] {
@@ -56,7 +72,7 @@
   }
 
   &__bottom {
-    border-top: 1px solid hsl(0 0% 100% / 15%);
+    border-block-start: 1px solid spruce.color(border, $only-color: true, $map: dark.$colors);
     padding-block: spruce.spacer(m);
 
     @include spruce.breakpoint(md) {
@@ -83,9 +99,5 @@
     display: flex;
     flex-wrap: wrap;
     gap: spruce.spacer(s);
-  }
-
-  strong {
-    color: spruce.color(heading);
   }
 }
