--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -36,6 +36,12 @@
     footer: (
       background: hsl(260deg 70% 6%),
     ),
+    hero: (
+      note-color: hsl(216deg 50% 44%),
+      note-background: hsl(210deg 100% 97%),
+      gradient-start: hsl(210deg 100% 98%),
+      gradient-end: hsl(0deg 0% 100%),
+    ),
     prism: (
       color: hsl(243 14% 29%),
       background: hsl(0 0% 98%),
