--- a/src/styles/config/_dark-colors.scss
+++ b/src/styles/config/_dark-colors.scss
@@ -73,6 +73,12 @@ $colors: (
     valid: $color-success,
     valid-focus-ring: color.adjust($color-success, $alpha: -0.75)
   ),
+  hero: (
+    note-color: hsl(0deg 0% 100%),
+    note-background: hsl(210deg 100% 70% / 15%),
+    gradient-start: hsl(206deg 100% 6%),
+    gradient-end: hsl(206deg 100% 7%),
+  ),
   prism: (
     color: hsl(217 34% 88%),
     background: hsl(207 83% 10%),
