--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,14 +15,13 @@
 }
 
 body {
-  --doc-heading-font-family: 'Sora', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  --doc-body-font-family: 'Open Sans', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --doc-heading-font-family: 'Sora', sans-serif;
+  --doc-body-font-family: 'Open Sans', sans-serif;
   --doc-border-radius-sm: 0.75rem;
   --doc-border-radius-lg: 2rem;
 
   background-color: spruce.color(background);
   font-family: var(--doc-body-font-family);
-  font-weight: 300 !important;
   overflow-x: hidden;
 }
 
