Change body font to inter

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,7 @@
 
 body {
   --doc-heading-font-family: 'Sora', sans-serif;
-  --doc-body-font-family: 'Open Sans', sans-serif;
+  --doc-body-font-family: 'Inter', cursive;
   --doc-border-radius-sm: 0.75rem;
   --doc-border-radius-lg: 2rem;
 
