--- a/src/styles/config/_fonts.scss
+++ b/src/styles/config/_fonts.scss
@@ -1,25 +1,19 @@
 @use '~sprucecss/scss/spruce';
 
 @include spruce.font-face(
-  'Open Sans',
-  '../fonts/open-sans-v34-latin-regular.woff2'
+  'Inter',
+  '../fonts/inter-v12-latin-regularr.woff2'
 );
 
 @include spruce.font-face(
-  'Open Sans',
-  '../fonts/open-sans-v34-latin-300.woff2',
-  300
-);
-
-@include spruce.font-face(
-  'Open Sans',
-  '../fonts/open-sans-v34-latin-500.woff2',
+  'Inter',
+  '../fonts/inter-v12-latin-500.woff2',
   500
 );
 
 @include spruce.font-face(
-  'Open Sans',
-  '../fonts/open-sans-v34-latin-700.woff2',
+  'Inter',
+  '../fonts/inter-v12-latin-700.woff2',
   700
 );
 
