--- a/src/styles/layouts/article/_post-content.scss
+++ b/src/styles/layouts/article/_post-content.scss
@@ -3,6 +3,10 @@
 .post-content {
   @include spruce.layout-stack(spruce.spacer(m));
 
+  @include spruce.breakpoint(lg) {
+    font-size: 1.0375rem;
+  }
+
   &--blog {
     > :is(dd, dl, dl, h1, h2, h3, h4, h5, h6, hr, ul, ol, p, blockquote, .prism-code-wrapper, .notification) {
       @include spruce.layout-center(
